# PYSHA

./: .env.example  .gitignore  CONTRIBUTING.md  DBPYSHA.sqlite3  Dockerfile  Externalrequirements.txt  LICENSE  PYSHADATABASE.json  README.md  Schedule.txt  TODO.py  USERINPUT.txt  _Fileinfo.py  _ImageProcessing.py  _Joke.py  _Monitoring.py  _NaturalLanguageProcessing.py  _StackoverFlow.py  _TextMode.py  _Weather.py  _WolFrameAlphaClass.py  _YouTube.py  __NLPMODIFIED.py  __PYSHA.py  __SPEAKINGCHECK.py  __github.py  __imagescheck.py  __imageshower.py  __init__.py  __linksearch.py  __messaging.py  __newsupdates.py  __playmusic.py  __request.py  __shorttermmemory.py  __speakcode.py  __tests.py  __twitteraccess.py  _dbdata.py  _stackoverflow.py  (+12 more)
.github/workflows/: ci.yml
AssistantProperties/: _chooseassitant.py
Chatdependencies/: SHAFAY_trained.txt  _sample.py
Chatstuff/: __chatcheck.py  _chatstuff.py  _sample.py
Localdb/: DBPYSHA.sqlite3
MouseMovments/: mm.py
NaturalLanguageProcessingModules/: 0_downloadpackage.py
OnSpeakType/: __sampleCheck.py
OpencvRecognition/: 1_installation.py
docs/: PLUGINS.md
legacy/: Externalrequirements.txt  PYSHADATABASE.json  USERINPUT.txt  _Joke.py  _MusicPlayer.py  _SocialMedia.py  _YouTube.py  __PYSHA.py  __Voice.py  __facebook.py  __manipulateprocess.py  __request.py  __setupCreation.py  __shorttermmemory.py  __soundcloud.py  __tests.py  __twitteraccess.py  _reverseshell.py  _stackoverflow.py  _twitter.py  _weatherchecking.py
legacy/AssistantProperties/: _chooseassitant.py  gendercheck.py
legacy/Chatdependencies/: _chat.py  database.db
legacy/Chatstuff/: database.db
legacy/Check/: check.py
legacy/Localdb/: DBPYSHA.sqlite3
src/pysha/: __init__.py  __main__.py  app.py  config.py
src/pysha/core/: __init__.py  engine.py  events.py  memory.py  plugin.py
src/pysha/engines/: __init__.py
src/pysha/engines/llm/: __init__.py  anthropic.py  ollama.py  openai.py
src/pysha/engines/stt/: __init__.py  google.py  whisper.py
src/pysha/engines/tts/: __init__.py  edge.py  pyttsx.py
src/pysha/skills/: __init__.py  base.py  datetime_skill.py  news.py  system_control.py  weather.py  web_search.py  wikipedia_skill.py  wolfram.py
src/pysha/ui/: __init__.py  cli.py  web.py
src/pysha/utils/: __init__.py  logging.py
tests/: conftest.py  test_app.py  test_config.py  test_events.py  test_memory.py  test_skills.py
